# sarsi

./: .gitignore  LICENSE  README.md  sarsi.cabal  stack.yaml
exe/: srs.hs
sarsi/: Main.hs
sarsi-elm/: Main.hs
sarsi-hs/: Main.hs
sarsi-nvim/: Main.hs
sarsi-nvim/Data/MessagePack/: RPC.hs  ToJSON.hs
sarsi-nvim/NVIM/: Client.hs  Command.hs  Info.hs  QuickFix.hs
sarsi-rs/: Main.hs
sarsi-sbt/: Main.hs
sarsi-vi/: Main.hs
src/: Rosetta.hs  Sarsi.hs
src/Codec/: Sarsi.hs
src/Codec/ELM/: Log.hs
src/Codec/GHC/: Log.hs
src/Codec/Sarsi/: Curses.hs  Dotnet.hs  ELM.hs  GCC.hs  GHC.hs  Nix.hs  Rust.hs  SBT.hs  Scala.hs
src/Codec/Sarsi/SBT/: Machine.hs
src/Data/Attoparsec/: Machine.hs
src/Data/Attoparsec/Text/: Machine.hs
src/Sarsi/: Consumer.hs  Processor.hs  Producer.hs  Trace.hs
src/Sarsi/Tools/: Pipe.hs  Shell.hs  Trace.hs
tests/: dotnet-error.txt  gcc-error.txt  nix-error.txt  sbt-error.txt
tests/Codec/Sarsi/: DotnetSpec.hs  GCCSpec.hs  NixSpec.hs  SBTSpec.hs  Spec.hs
