name:                sarsi
version:             0.0.3.0
synopsis:            A universal quickfix toolkit and his protocol.
 
description:
  Usage overview can be found in the <http://github.com/aloiscochard/sarsi#sarsi README>.

homepage:            http://github.com/aloiscochard/sarsi
license:             Apache-2.0
license-file:        LICENSE
author:              Alois Cochard
maintainer:          alois.cochard@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:
    Codec.Sarsi
    Codec.Sarsi.GHC
    Codec.Sarsi.SBT
    Codec.Sarsi.SBT.Machine
    Sarsi
    Sarsi.Consumer
    Sarsi.Producer
    Sarsi.Trace
    -- TODO Extract in a `codec-ghc-log` module
    Codec.GHC.Log
    -- TODO Extract in a `machines-attoparsec` module
    Data.Attoparsec.Machine
    Data.Attoparsec.Text.Machine
  build-depends:
      base                  >= 4.6.0.1    && < 5
    , async                 >= 2.1        && < 2.2
    , attoparsec            >= 0.12       && < 0.14
    , binary                >= 0.7        && < 0.9
    , bytestring            >= 0.10       && < 0.11
    , containers            >= 0.5        && < 0.6
    , cryptonite            >= 0.10       && < 0.14
    , directory             >= 1.2        && < 1.3
    , filepath              >= 1.4        && < 1.5
    , fsnotify              >= 0.2        && < 0.3
    , machines              >= 0.6        && < 0.7
    , machines-binary       >= 0.3.0.2    && < 0.4
    , machines-process      >= 0.2.0.6    && < 0.3
    , machines-io           >= 0.2.0.12   && < 0.3
    , msgpack               >= 1.0        && < 1.1
    , network               >= 2.6        && < 2.7
    , process               >= 1.1        && < 1.5
    , stm                   >= 2.4        && < 2.5
    , text                  >= 1.2        && < 1.3
    , vector                >= 0.10       && < 0.12

executable sarsi 
  main-is:              Main.hs
  other-modules:
    Paths_sarsi
  build-depends:       
      base
    , Cabal
    , sarsi                 == 0.0.3.0
  hs-source-dirs:       sarsi
  ghc-options:          -Wall -threaded
  default-language:     Haskell2010

executable sarsi-hs
  main-is:              Main.hs
  build-depends:       
      base
    , sarsi                 == 0.0.3.0
    , machines
    , machines-io
    , machines-process
    , process
    , text
    , fsnotify              >= 0.2        && < 0.3
  hs-source-dirs:       sarsi-hs
  ghc-options:          -Wall -dynamic -threaded
  default-language:     Haskell2010

executable sarsi-nvim
  main-is:              Main.hs
  other-modules:
    -- TODO Extract in a mspgack specific packages.
    -- Data.MessagePack.ToJSON
    Data.MessagePack.RPC
    -- TODO Extract in a lightweight nvim client.
    NVIM.Client
    -- NVIM.Info
  build-depends:       
      base
    , sarsi                 == 0.0.3.0
    , machines
    , binary
    , bytestring
    , containers
    , machines
    , machines-binary
    , machines-io
    , msgpack
    , network
    , process
    , text
    , vector
    , unordered-containers  >= 0.2        && < 0.3
  hs-source-dirs:       sarsi-nvim
  ghc-options:          -Wall -dynamic -threaded
  default-language:     Haskell2010

executable sarsi-sbt
  main-is:              Main.hs
  other-modules:
  build-depends:       
      base
    , sarsi                 == 0.0.3.0
    , machines
    , machines-io
    , machines-process
    , process
    , text
  hs-source-dirs:       sarsi-sbt
  ghc-options:          -Wall -dynamic -threaded
  default-language:     Haskell2010

executable sarsi-vi
  main-is:              Main.hs
  build-depends:       
      base
    , sarsi                 == 0.0.3.0
    , directory
    , filepath
    , machines
    , machines-io
    , text
    , vector
  hs-source-dirs:       sarsi-vi
  ghc-options:          -Wall -dynamic -threaded
  default-language:     Haskell2010
