name:                sarsi
version:             0.0.5.1
synopsis:            A universal quickfix toolkit and his protocol.
description:
  Usage overview can be found in the <http://github.com/aloiscochard/sarsi#sarsi README>.
homepage:            http://github.com/aloiscochard/sarsi
license:             Apache-2.0
license-file:        LICENSE
author:              Alois Cochard
maintainer:          alois.cochard@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:
    Codec.Sarsi
    Codec.Sarsi.Curses
    Codec.Sarsi.GHC
    -- TODO Extract in rosetta
    Codec.Sarsi.Rust
    Codec.Sarsi.SBT
    Codec.Sarsi.SBT.Machine
    Rosetta
    Sarsi
    Sarsi.Consumer
    Sarsi.Processor
    Sarsi.Producer
    Sarsi.Tools.Pipe
    Sarsi.Tools.Trace
    -- TODO Extract in a `codec-ghc-log` module or in rosetta
    Codec.GHC.Log
    -- TODO Extract in a `machines-attoparsec` module
    Data.Attoparsec.Machine
    Data.Attoparsec.Text.Machine
  build-depends:
      base                  >= 4.6.0.1    && < 5
    , ansi-terminal         >= 0.10       && < 0.12
    , async                 >= 2.1        && < 2.3
    , attoparsec            >= 0.12       && < 0.14
    , binary                >= 0.7        && < 0.9
    , bytestring            >= 0.10       && < 0.11
    , containers            >= 0.5        && < 0.7
    , cryptonite            >= 0.10       && < 0.29
    , msgpack               >= 1.0        && < 1.1
    , directory             >= 1.2        && < 1.4
    , filepath              >= 1.4        && < 1.5
    , fsnotify              >= 0.2        && < 0.4
    , machines              >= 0.7        && < 0.8
    , machines-binary       >= 7.0        && < 7.1
    , machines-process      >= 7.0.0.2    && < 7.1
    , machines-io           >= 7.0        && < 7.1
    , network               >= 3.1        && < 3.2
    , process               >= 1.1        && < 1.7
    , stm                   >= 2.4        && < 2.6
    , text                  >= 1.2        && < 1.3
    , vector                >= 0.10       && < 0.13

executable sarsi 
  main-is:              Main.hs
  other-modules:
    Paths_sarsi
  build-depends:
      base
    , sarsi
    , Cabal
    , containers
  hs-source-dirs:       sarsi
  ghc-options:          -Wall -threaded
  default-language:     Haskell2010

executable sarsi-nvim
  main-is:              Main.hs
  other-modules:
    -- TODO Extract in a mspgack specific packages.
    -- Data.MessagePack.ToJSON
    Data.MessagePack.RPC
    -- TODO Extract in a lightweight nvim client.
    NVIM.Client
    NVIM.Command
    NVIM.QuickFix
  build-depends:
      base
    , sarsi
    , async
    , machines
    , binary
    , bytestring
    , containers
    , machines
    , machines-binary
    , machines-io
    , msgpack
    , network
    , process
    , text
    , stm
    , vector
    , unordered-containers  >= 0.2        && < 0.3
  hs-source-dirs:       sarsi-nvim
  ghc-options:          -Wall -dynamic -threaded
  default-language:     Haskell2010

executable sarsi-sbt
  main-is:              Main.hs
  other-modules:
  build-depends:
      base
    , sarsi
    , machines
    , machines-io
    , machines-process
    , process
    , text
  hs-source-dirs:       sarsi-sbt
  ghc-options:          -Wall -dynamic -threaded
  default-language:     Haskell2010

executable sarsi-vi
  main-is:              Main.hs
  build-depends:
      base
    , sarsi
    , directory
    , filepath
    , machines
    , machines-io
    , text
    , vector
  hs-source-dirs:       sarsi-vi
  ghc-options:          -Wall -dynamic -threaded
  default-language:     Haskell2010

executable srs
  main-is:              srs.hs
  build-depends:
      base
    , sarsi
    , async
    , bytestring
    , machines
    , machines-io
    , machines-process
    , process
  hs-source-dirs:       exe
  ghc-options:          -Wall -dynamic -threaded
  default-language:     Haskell2010
